doc: better error example

--- a/src/_pages/compute-engine-demo.html
+++ b/src/_pages/compute-engine-demo.html
@@ -360,7 +360,7 @@ version: Compute Engine version
       0 & n =  0\\
       1 & n =  1\\
       n^2+1 & n \geq 2   \end{cases}">Piecewise</span>
-      <span class="sample" data-sample="\pi + \mathrm{True}">Errors</span>
+      <span class="sample" data-sample="(x = \pi) + 2">Errors</span>
 
     </div>
     <div id="input">
