--- a/src/_pages/compute-engine-demo.html
+++ b/src/_pages/compute-engine-demo.html
@@ -594,9 +594,13 @@ version: Compute Engine version
     const mf = document.getElementById('mf');
     mf.setOptions({
         onInlineShortcut: (_mf, s) => {
-          if (/^(ln|log|lb|lg)/.test(s)) return '\\' + s;
-          if (/^[a-zA-Z][a-zA-Z0-9]*'?(_[a-zA-Z0-9]+'?)?$/.test(s)) {
-            const m = s.match(/^([a-zA-Z]+)([0-9]+)$/);
+          const f = s.match(/^(cos|sin|tan|arcsin|arccos|arctan|arctg|arcctg|arcsec|arccsc|arsinh|arcosh|artanh|arcsech|arccsch|arg|ch|cosec|cosh|cot|cotg|coth|csc|ctg|cth|log|ln|lg|lb|sec|sinh|sh|tanh|tg|th)(.*)/);
+
+          if (f && f[1] && !f[2]) return `\\${f[1]} `;
+          if (f && f[1] && f[2]) return `\\${f[1]} ${f[2]}`;
+            
+          if (/^[a-zA-Z][a-zA-Z0-9]*'?_([a-zA-Z0-9]+'?)?$/.test(s)) {
+            const m = s.match(/^([a-zA-Z]+)_([a-zA-Z0-9]+'?)$/);
             if (m) {
               if (
                 [
@@ -646,56 +650,21 @@ version: Compute Engine version
                 ].includes(m[1])
               )
                 return `\\${m[1]}_{${m[2]}}`;
-              if (
-                [
-                  'cos',
-                  'sin',
-                  'tan',
-                  'arcsin',
-                  'arccos',
-                  'arctan',
-                  'arctg',
-                  'arcctg',
-                  'arcsec',
-                  'arccsc',
-                  'arsinh',
-                  'arcosh',
-                  'artanh',
-                  'arcsech',
-                  'arccsch',
-                  'arg',
-                  'ch',
-                  'cosec',
-                  'cosh',
-                  'cot',
-                  'cotg',
-                  'coth',
-                  'csc',
-                  'ctg',
-                  'cth',
-                  'log',
-                  'ln',
-                  'lg',
-                  'lb',
-                  'sec',
-                  'sinh',
-                  'sh',
-                  'tanh',
-                  'tg',
-                  'th',
-                ].includes(m[1])
-              ) {
-                return `\\${m[1]} ${m[2]}`;
-              }
+
               return `\\mathrm{${m[1]}}_{${m[2]}}`;
             }
-            if (s.includes('_')) debugger;
-            return '\\mathrm{' + s + '}';
+            return `\\mathrm{${s}}`;
           }
+
+          const m2 = s.match(/^([a-zA-Z][a-zA-Z0-9]+)$/);
+          if (m2) return `\\mathrm{${s}}`;
+
           return '';
-        },
-      });    mf.addEventListener('input', (ev) => updateContent(mf));
-    updateContent(mf);
+        }
+      });    
+      
+      mf.addEventListener('input', (ev) => updateContent(mf));
+      updateContent(mf);
 
     async function updateContent(mf) {
       const latex = mf.getValue('latex-expanded');
