chore: deps, tweak home page layout

--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,13 @@ read_time: false
   </div>
   <div class="copy">
     <!-- <h2><span class='eyebrow'>MathLive</span>Math Input Made Easy</h2> -->
-    <h2>MathLive<span class='subhead'>Math Input Made Easy</span></h2>
+    <h2>MathLive<span class="subhead">Math Input Made Easy</span></h2>
     <p>Beautifully typeset math as easy to enter as text</p>
-    <p><a href='/mathlive/'>Learn More<span class='ml-sm'><i class="fas fa-chevron-right navigation"></i></span></a></p>
+    <p><a href="/mathlive/" class="cta">Try It</a></p>
   </div>
 </section>
 
-<div class='cards col2'>
+<div class="cards col2">
   <!-- <section id="mathjson" class="card">
     <div class="copy">
       <h2>MathJSON<span class='subhead'>The Web Native Format for Math</span></h2>
@@ -46,12 +46,11 @@ read_time: false
 
   <section id="compute-engine" class="card">
     <div class="copy">
-      <h2>Compute Engine<span class='subhead'>Simplify, Solve, Evaluate</span></h2>
-      <h3>Manipulate <a href='/math-json/'>MathJSON</a> expressions symbolically
+      <h2>Compute Engine<span class="subhead">Simplify, Evaluate, Compare</span></h2>
+      <h3>Manipulate <a href="/math-json/">MathJSON</a> expressions symbolically
          and numerically, from checking if \(x + x = 2x\) or if 
          \(2^{11} - 1 \in \mathbb{P}\) to calculating \(e^{i\pi} \).</h3>
-      <p><a href='/compute-engine/'>Learn More<span class='ml-sm'><i
-              class="fas fa-chevron-right navigation"></i></span></a></p>
+      <p><a href="/compute-engine/" class="cta">Learn More</a></p>
     </div>
     <div class="figure">
       <img alt="Compute Engine Logo" src="/assets/Compute-Engine-2.jpg">
@@ -60,7 +59,7 @@ read_time: false
 
   <section id="visual-toolkit" class="card">
     <div class="copy">
-      <h2>Visual Toolkit<span class='subhead'>Make Scientific Data Visible</span></h2>
+      <h2>Visual Toolkit<span class="subhead">Make Scientific Data Visible</span></h2>
       <h3>Discover insights hidden in complex data.</h3>
       <p><strong>Coming soon.</strong></p>
     </div>
