--- a/src/_pages/compute-engine-demo.html
+++ b/src/_pages/compute-engine-demo.html
@@ -6,7 +6,7 @@ date: Last Modified
 sidebar:
     - nav: "universal"
 version: Compute Engine version
-
+render_math_in_document: true
 ---
 
 <style>
