--- a/src/_pages/gitter.html
+++ b/src/_pages/gitter.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Gitter
+title: Loading Gitter...
 permalink: /gitter/
 head:
   redirect: https://app.gitter.im/#/room/#cortex-js_community:gitter.im
 ---
 
-<div style="display: flex; align-items:center; justify-content:center; width:100%; height: 60vh; font-size: 2em">
-  <a href="https://matrix.to/#/#cortex-js_community:gitter.im">Gitter</a>
+<div style="display: flex; align-items:center; justify-content:center; width:100%; height: 60vh; font-size: 4em; font-weight: 900; text-decoration: none;">
+  <a href="https://matrix.to/#/#cortex-js_community:gitter.im">Loading Gitter...</a>
 </div>
