doc: Updated documentation to match mathlive 0.90

--- a/src/_pages/mathlive.html
+++ b/src/_pages/mathlive.html
@@ -175,7 +175,7 @@ style="margin-bottom:2em; border-radius:8px 8px 0 0; border:1px solid #203346">
     math-field { font-size: 32px; }
   </style>
     <div slot="html">
-&lt;math-field virtual-keyboard-mode="manual"&gt;
+&lt;math-field &gt;
   x=\frac{-b\pm\sqrt{b^2-4ac}}{2a}
 &lt;/math-field&gt;</div>
   </code-playground>
@@ -207,7 +207,7 @@ Read more about the <strong>LaTeX commands</strong> supported by MathLive
   </div>
   <div class="copy">
     <p>Many options are customizable with a <a href="/docs/mathlive/">comprehensive API</a>, from you own dictionary of LaTeX macros,
-      your own inline shortcuts, your own virtual keyboards and more.</p>
+      your own inline shortcuts, your own virtual keyboard and more.</p>
     <p>Paste in MathASCII or LaTeX, and read the content in the format you need, including an 
       easy to parse <a href="/math-json">MathJSON object</a> representing an Abstract Syntax Tree of the formula.</p>
   </div>
@@ -256,7 +256,7 @@ Read more about the <strong>virtual keyboard</strong>
 <section class="fullwidth">
   <div class="copy">
       <p>MathLive is accessible and works with screenreaders. A custom text-to-speech engine helps navigate equations.</p>
-    <p>On screen, customizable, <a href="/mathlive/guides/virtual-keyboards/">virtual keyboards</a> make input easy, even on mobile devices.</p>
+    <p>A customizable, <a href="/mathlive/guides/virtual-keyboards/">virtual keyboard</a> make input easy, even on mobile devices.</p>
   </div>
   <div class="figure" style="box-shadow: none; border:none;background: transparent">
     <i class="fa-10x fad fa-universal-access"></i>
