feat: added MathLive editor

--- a/src/_pages/mathlive-reference-redirect.html
+++ b/src/_pages/mathlive-reference-redirect.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: The MathJSON format
+title: MathLive
 permalink: /mathlive/reference.html
 head:
   redirect: https://cortexjs.io/mathlive/
