--- a/src/_pages/funding.html
+++ b/src/_pages/funding.html
@@ -1,6 +1,6 @@
 ---
-title: Funding
-permalink: /funding/
+title: Support
+permalink: /support/
 read_time: false
 layout: single
 sidebar:
@@ -8,7 +8,7 @@ sidebar:
 ---
 
 <section>
-  <h1 class="font-size-2xl">Funding</h1>
+  <h1 class="font-size-2xl">Support the Project</h1>
   <div class="max-w-lg">
     <p>
       CortexJS is an open source project under the
@@ -52,8 +52,8 @@ sidebar:
       rel="follow"
       aria-hidden="true"
       tabindex="-1"
-      >&nbsp;</a
-    >
+      style="color:white; text-decoration: none; display: flex; align-items:center"
+      >
     <div class="ml-lg mr-lg">
       <i
         style="
@@ -72,6 +72,6 @@ sidebar:
         <li><i class="fas fa-utensils"></i>&nbsp;$25</li>
         <li><i class="fad fa-pie"></i>&nbsp;$50</li>
       </ul>
-    </div>
+    </div></a>
   </div>
 </section>
