--- a/src/_pages/mathlive-edit.html
+++ b/src/_pages/mathlive-edit.html
@@ -97,8 +97,7 @@ head:
           padding-bottom: 0.5em;
           width: calc(100% - 10px); /* Subtract horizontal padding */
 
-          font-family: 'IBM Plex mono', 'Source Code Pro', Menlo,
-              'Bitstream Vera Sans Mono', Monaco, Courier, 'Andale Mono', monospace;
+          font-family: var(--monospace-font-family);
           color: #f0c674;
 
           background: #35434e;
