--- a/src/_pages/mathlive.html
+++ b/src/_pages/mathlive.html
@@ -160,7 +160,7 @@ style="margin-bottom:2em; border-radius:8px 8px 0 0; border:1px solid #203346">
 
 <h1>A WEB COMPONENT FOR MATH INPUT</h1>
 
-<p style="text-align:center">Introducing  <kbd>&lt;math-field&gt;</kbd>: works just like <kbd>&lt;textarea&gt;</kbd>, but for math.</p>
+<p style="text-align:center">Introducing  <kbd>&lt;math-field&gt;</kbd>: works just like an HTML <kbd>&lt;textarea&gt;</kbd>, but for math.</p>
 
 <section class="m-lg mb-xl max-w-2xl">
 <code-playground layout="stack">
@@ -186,13 +186,13 @@ style="margin-bottom:2em; border-radius:8px 8px 0 0; border:1px solid #203346">
 
 <section>
   <div class="pod">
-  <h2>TeX quality typesetting</h2>
+  <h2>LaTeX Quality Typesetting</h2>
   <div class="copy">
     <p>MathLive is a faithful JavaScript implementation of the <strong>TeX layout algorithms</strong>, the gold standard for typesetting of mathematical content.</p>
     <div class="figure">
       <img src="/assets/images/mathfield/loop-eqn.png">
     </div>
-    <p style="margin-top: 2rem">MathLive supports over <strong>800 TeX commands</strong>, including mathematical symbols, matrices, chemical equations, styling, macros and complex layouts.</p>
+    <p style="margin-top: 2rem">MathLive supports over <strong>800 LaTeX commands</strong>, including mathematical symbols, matrices, chemical equations, styling, macros and complex layouts.</p>
   </div>
 {% readmore "/mathlive/reference/commands/" %}
 Read more about the <strong>LaTeX commands</strong> supported by MathLive
