--- a/src/index.html
+++ b/src/index.html
@@ -31,18 +31,17 @@ read_time: false
 </section>
 
 <div class="cards col2">
-  <!-- <section id="mathjson" class="card">
+  <section id="mathjson" class="card">
     <div class="copy">
       <h2>MathJSON<span class='subhead'>The Web Native Format for Math</span></h2>
       <h3>A JSON schema to represent math expressions.</h3>
+      <p><a href="/math-json/" class="cta">Learn More</a></p>
 
-      <p><a href='/math-json/'>Learn More<span class='ml-sm'><i class="fas fa-chevron-right navigation"></i></span></a>
-      </p>
     </div>
     <div class="figure">
       <img src="/assets/MathJSON-1.jpg">
     </div>
-  </section> -->
+  </section>
 
   <section id="compute-engine" class="card">
     <div class="copy">
@@ -57,7 +56,7 @@ read_time: false
     </div>
   </section>
 
-  <section id="visual-toolkit" class="card">
+  <!-- <section id="visual-toolkit" class="card">
     <div class="copy">
       <h2>Visual Toolkit<span class="subhead">Make Scientific Data Visible</span></h2>
       <h3>Discover insights hidden in complex data.</h3>
@@ -66,7 +65,7 @@ read_time: false
     <div class="figure">
       <img alt="Visual Toolkit Logo" src="/assets/visual-toolkit-1.jpg">
     </div>
-  </section>
+  </section> -->
 
 
 </div>
