feat: make MathJSON field editable

--- a/src/_pages/compute-engine-demo.html
+++ b/src/_pages/compute-engine-demo.html
@@ -384,7 +384,7 @@ render_math_in_document: true
   <div id="input">
     <code class="label">expr = </code>
     <div class="row">
-      <math-field id="mf" class="mathfield" >
+      <math-field id="mf" class="mathfield">
         <!-- 2+3.001 -->
         e^{i\pi}
         <!-- 1 + 2 + 3.001 -->
@@ -488,7 +488,7 @@ render_math_in_document: true
 
   <div class="output-section" id="canonical-form">
     <math-field class="latex" read-only></math-field>
-    <div class="output mathjson"></div>
+    <textarea id="mathjson" class="output mathjson"></textarea>
   </div>
 
   <div class="output-section" id="domain">
@@ -715,8 +715,30 @@ render_math_in_document: true
   mf.addEventListener('input', (ev) => updateContent(mf));
   updateContent(mf);
 
-  async function updateContent(mf) {
+  document.getElementById('mathjson').addEventListener('input', (ev) => {
+    let expr = ce.box([]);
+    let latex = '';
+    const value = ev.target.value;
+    if (value.trim().length === 0) {
+      mf.value = '';
+      updateContent(mf);
+    } else
+      try {
+        expr = ce.box(JSON.parse(value));
+        latex = expr.latex;
+      } catch (e) {
+        expr = ce.box([]);
+        latex = `\\error{\\text{${e.toString()}}}`;
+      }
+    updateContent(mf, expr);
+    mf.value = latex;
+  });
+
+  async function updateContent(mf, expr) {
     const latex = mf.getValue('latex-expanded');
+    try {
+      if (expr === undefined) expr = ce.parse(latex);
+    } catch (e) {}
 
     document.getElementById('numeric-mode').classList.remove('is-visible');
     updateExpr(null, 'canonical-form');
@@ -727,7 +749,6 @@ render_math_in_document: true
 
     // document.getElementById('output-latex').innerText = '';
 
-    let expr;
     try {
       const latexEl = document.getElementById('mathfield-latex');
       if (latexEl) latexEl.innerHTML = escapeHtml(latex);
@@ -737,9 +758,6 @@ render_math_in_document: true
           mf.getValue('ascii-math')
         );
       }
-
-      expr = ce.parse(latex);
-
       const mathJsonEl = document.getElementById('mathfield-math-json');
       if (mathJsonEl) mathJsonEl.innerHTML = exprToString(expr.json);
     } catch (e) {
