--- a/src/_pages/compute-engine-demo.html
+++ b/src/_pages/compute-engine-demo.html
@@ -386,6 +386,11 @@ render_math_in_document: true
       n^2+1 & n \geq 2   \end{cases}"
       >Piecewise</span
     >
+    <span
+      class="sample"
+      data-sample="\lfloor \pi \rfloor = \lceil \exponentialE \rceil"
+      >Floor/Ceil</span
+    >
     <span class="sample" data-sample="(x = \pi) + 2">Errors</span>
   </div>
   <div id="input">
